# RegistroMM

./: .env  .env.development  .env.test  404.html  LICENSE  index.html  jest.config.js  netlify.toml  package-lock.json  package.json  package.json.bak  postcss.config.js  tailwind.config.js  test.html  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  vite.config.ts  windsurf_deployment.yaml
assets/: index-8b533cce.js  index.2f7e9fa7.js  index.4d07a41d.css  index.6d7cdd4b.js  index.93c6b6e7.js  index.a1946b87.js  index.a2207076.js  index.b7b668cd.js  index.cd955e8c.js  index.es.1a037f4b.js  index.f31b5a8f.js
public/: 404.html  CNAME  index.html
registro-mm/: .env  .env.staging  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_PLAN.md  README.md  RELEASE.md  RELEASE_ANNOUNCEMENT.md  REVIEW_CHECKLIST.md  deploy.ps1  dev-setup.ps1  monitoring-config.yaml  production-setup.ps1  release-validation.ps1
registro-mm/.github/workflows/: ci-cd.yml  ci.yml
registro-mm/config/: production_validator.rs
registro-mm/docs/: api_spec.yaml
registro-mm/load-tests/: main.rs
registro-mm/migrations/: 20240411_create_users.sql
registro-mm/src/: main.rs
registro-mm/src/errors/: mod.rs
registro-mm/src/models/: user.rs
registro-mm/src/monitoring/: external.rs
registro-mm/src/routes/: auth.rs  health.rs
registro-mm/src/services/: auth_service.rs
registro-mm/src/utils/: logger.rs  performance.rs  validators.rs
registro-mm/tests/: acceptance_tests.rs  auth_tests.rs  comprehensive_test_suite.rs  integration_tests.rs
registro-mm/tests/integration/: mod.rs
(+116 files in other folders)
