[package]
name = "registro-mm"
version = "1.0.0"
edition = "2021"
authors = ["Sua Equipe <contato@registromm.com>"]
description = "Sistema de registro e autenticação seguro"
license = "MIT"
readme = "README.md"
repository = "https://github.com/seu-usuario/registro-mm"

[dependencies]
rocket = "0.5.0-rc.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
argon2 = "0.5"
jsonwebtoken = "8.3"
chrono = { version = "0.4", features = ["serde"] }
validator = "0.16"
regex = "1.8"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
criterion = "0.4"

[dev-dependencies]
mockall = "0.11"
rocket = { version = "0.5.0-rc.3", features = ["json"] }

[features]
default = []
test = []

[[bench]]
name = "load_tests"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
